# VoxCPM-ONNX

./: .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  export.sh  infer.py  opt.sh  pyproject.toml  requirement-gpu.txt  requirement.txt
onnx/: export_audio_vae_decoder.py  export_audio_vae_encoder.py  export_voxcpm_decode.py  export_voxcpm_prefill.py  utils.py
src/onnx_infer/: __init__.py  audio.py  config.py  constants.py  infer_loop.py  inputs.py  runtime.py  store.py  tokenize.py  vae.py
src/server/: app.py
src/voxcpm/: cli.py  core.py
src/voxcpm/model/: VoxCPM_Audio_VAE_Decoder.py  VoxCPM_Audio_VAE_Encoder.py  VoxCPM_Deocde.py  VoxCPM_Prefill.py  voxcpm.py
src/voxcpm/modules/audiovae/: audio_vae.py
src/voxcpm/modules/locdit/: local_dit.py  unified_cfm.py.bak
src/voxcpm/modules/locenc/: local_encoder.py
src/voxcpm/modules/minicpm4/: model.py  sdpa_gqa.py
